minor fix on mobile menu

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a:visited {
 /* below 1200px */
 @media (max-width: 75em) {
   .workouts {
-    height: 18;
+    height: 20rem;
   }
 }
 
